--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualiser</title>
+    <title>RF-Visualiser</title>
     <link rel="stylesheet" href="visualiser.css">
+    <link rel="shortcut icon" type="image/x-icon" href="eye.ico" />
 </head>
 <body>
     <div id="top">
